--- a/app/views/signIn.scala.html
+++ b/app/views/signIn.scala.html
@@ -10,6 +10,7 @@
             <strong>@Messages("error")</strong> @msg
         </div>
     }
+    @helper.CSRF.formField
     <fieldset class="col-md-6 col-md-offset-3">
         <legend>@Messages("sign.in.credentials")</legend>
         @helper.form(action = routes.CredentialsAuthController.authenticate()) {
@@ -26,7 +27,6 @@
         <div>
             <p class="not-a-member">@Messages("not.a.member") <a href="@routes.ApplicationController.signUp">@Messages("sign.up.now")</a></p>
         </div>
-
 
     </fieldset>
 }
